edit user request
